5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1836_2603.log
== TEST (2019-07-02 07:41:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(n)[1],dtype = int)
print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:41:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:44:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

mat4 = x[4:] + mat4

print(mat4)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:44:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

mat4 = x[4:] + mat4

print(mat4)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:44:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

mat4 = x[4:] 

print(mat4)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:44:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)


mat4 = x[4:] 

print(mat4)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:45:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)


mat4 = x[4:] 

print(x[4:])
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:46:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
vetor = sorted(x, reverse=True)
mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:48:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = sorted(x, reverse=True)
mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:48:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[0:]
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:49:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[0:]
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:49:18) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[:4]
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:49:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = "aa"
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:49:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[1,1]
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:49:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[0,0]
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:50:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[0,1]
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:50:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[0:]
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:50:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[0,4]
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:50:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)
x1 = x[0,3]
print(x1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:52:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for in range x:
	mat1 = x[3,x]
print(mat1)
-- ERROR:
File "XXXX", line 11
    for in range x:
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:52:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range x:
	mat1 = x[3,i]
print(mat1)
-- ERROR:
File "XXXX", line 11
    for i in range x:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:53:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range size(x):
	mat1[i] = x[3,i]
print(mat1)
-- ERROR:
File "XXXX", line 11
    for i in range size(x):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:54:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range (size(x)):
	mat1[i] = x[3,i]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:54:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range (size(x)):
	mat1[i] = x[2,i]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:54:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range (size(x)):
	mat1[i] = x[i,i]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:55:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range (size(x)):
	mat1[1] = x[3,i]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:55:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)


print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:55:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range (size(x)):
	mat1[1] = x[3,i] + mat1
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:55:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range (size(x)):
	mat1 = x[3,i] + mat1
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:55:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range (size(x)):
	mat1 = x[3,i] + mat1[i]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:58:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range (size(x)):
	mat1[i] = x[3,i] 
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:59:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[1],dtype = int)
mat2 = zeros(shape(x)[1],dtype = int)
mat3 = zeros(shape(x)[1],dtype = int)
mat4 = zeros(shape(x)[1],dtype = int)

for i in range (size(x)):
	for j in range (size(x)):
		mat1[i] = x[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:59:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range (size(x)):
	for j in range (size(x)):
		mat1[i] = x[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:59:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range (size(x)):
	for j in range (size(x)):
		mat1[i] = x[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:10:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:10:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:11:37) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:11:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:11:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:12:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)
mat1 = x[0,:]

print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)
mat1 = x[:,3]
mat2 = x[1,:]
mat3 = x[2,:]
mat4 = x[3,:]

print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)
mat1 = x[0,:]
mat2 = x[1,:]
mat3 = x[2,:]
mat4 = x[3,:]

print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:13:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)
mat1 = x[0,:]


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:15:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range size(x)[0]:
	mat1[i] = x[0,i]


print(mat1)

-- ERROR:
File "XXXX", line 11
    for i in range size(x)[0]:
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:15:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range (0size(x)[0]):
	mat1[i] = x[0,i]


print(mat1)

-- ERROR:
File "XXXX", line 11
    for i in range (0size(x)[0]):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:15:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range (size(x)[0]):
	mat1[i] = x[0,i]


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:16:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range 4:
	mat1[i] = x[0,i]


print(mat1)

-- ERROR:
File "XXXX", line 11
    for i in range 4:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:16:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range x:
	mat1[i] = x[0,i]


print(mat1)

-- ERROR:
File "XXXX", line 11
    for i in range x:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:16:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range size(x):
	mat1[i] = x[0,i]


print(mat1)

-- ERROR:
File "XXXX", line 11
    for i in range size(x):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:16:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

for i in range (shape(x)[0]):
	mat1[i] = x[0,i]


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:17:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	for j in range (shape(x)[1])
		mat1[i,j] = x[0,i]


print(mat1)

-- ERROR:
File "XXXX", line 13
    for j in range (shape(x)[1])
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:17:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	for j in range (shape(x)[1]):
		mat1[i,j] = x[0,i]


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:17:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	for j in range (shape(x)[1]):
		mat1[i,j] = x[0,i]


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:18:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	for j in range (shape(x)[1]):
		mat1[i,j] = x[i,j]


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:19:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[:,3] = x[I] 
		


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:19:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[:,3] = x[0,i] 
		


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:19:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[0,:] = x[0,i] 
		


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:20:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[0] = x[0,i] 
		


print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:22:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[0,i] = x[0,i]
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:22:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[0,i] = x[0,i]
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:23:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[0,i] = x[0,i]
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:24:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[i] = x[0,i]
		




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:24:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[i] = x[0,i]
print(mat1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:24:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[i] = x[0,-i]
print(mat1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:25:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)


for i in range (shape(x)[0]):
	mat1[i] = x[0,-1+i]
print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:26:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(mat1, reverse=True)

print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:27:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)

print(mat1)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:27:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


print(mat1)
print(mat2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:28:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


print(mat1)
print(mat2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:28:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))

mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


print(mat1)
print(mat2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:28:34) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


print(mat1)
print(mat2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:28:47) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


print(mat1.Y)
print(mat2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:28:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


print(mat1.T)
print(mat2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:29:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


print(mat1)
print(mat2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:30:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


y = zeros((4,4), dtype=int)

y[:,0] = mat1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:30:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


y = zeros((4,4), dtype=int)

y[:,0] = mat1

print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:30:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


y = zeros((4,4), dtype=int)

y[:,0] = mat1
y[:,1] = mat2
y[:,2] = mat3
y[:,3] = mat4


print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 08:31:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


y = zeros((4,4), dtype=int)

y[:,0] = mat1
y[:,1] = mat2
y[:,2] = mat3
y[:,3] = mat4


print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 08:31:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

x = array(eval(input("Matriz:")))
x = x.T
mat1 = zeros(shape(x)[0],dtype = int)
mat2 = zeros(shape(x)[0],dtype = int)
mat3 = zeros(shape(x)[0],dtype = int)
mat4 = zeros(shape(x)[0],dtype = int)

mat1 = sorted(x[0,:], reverse=True)
mat2 = sorted(x[1,:], reverse=True)
mat3 = sorted(x[2,:], reverse=True)
mat4 = sorted(x[3,:], reverse=True)


y = zeros((4,4), dtype=int)

y[:,0] = mat1
y[:,1] = mat2
y[:,2] = mat3
y[:,3] = mat4


print(y)
-- EXECUTION TIME:
0.858902
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
